k8s_yaml/dal_server/deploy-dal-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dal-server
  template:
    metadata:
      labels:
        name: dal-server
    spec:
      containers:
      - name: dal-server
        image: docker.io/solhope24/dal-server:latest
        imagePullPolicy: IfNotPresent
