k8s_yaml/dal_server/service-dal-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: dal-server
spec:
  selector:
    name: dal-server
  ports:
  - port: 80
    targetPort: 8080
