k8s_yaml/dal_server/route-dal-server.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dal-server
spec:
  to:
    kind: Service
    name: dal-server
  port:
    targetPort: 80
  tls:
    termination: edge
